Reformatted Document using Beautify

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!--Labels are directly above the content they repersent-->
 <html>
   <!-- Begin Head Code -->
+
   <head>
     <!--Meta Information-->
     <meta charset="utf-8" />
@@ -20,6 +21,7 @@
   </head>
 
   <!-- Begin Body Code -->
+
   <body>
     <!-- Begin Header Code -->
     <div class="header-wrapper">
@@ -50,16 +52,14 @@
           </div>
         </div>
       </div>
+
       <div class="navigation-wrapper">
         <div class="nav-item">
           <a href="index.html">Home</a>
         </div>
+
         <div class="nav-item">
-          <a href="index.html">
-            <span class="material-icons">
-            list
-            </span>
-            Projects</a>
+          <a href="index.html"> Projects</a>
         </div>
         <div class="nav-item">
           <a href="index.html">Home</a>
