--- a/index.html
+++ b/index.html
@@ -53,16 +53,17 @@
         </div>
       </div>
 
-      <div class="navigation-wrapper">
-        <div class="nav-item">
-          <a href="index.html">Home</a>
+      <div class="navigation-wrapper" id="navWrapper">
+        <div class="nav-item active" onclick="openHome()">
+          <a class="nav-link">Home</a>
         </div>
-
-        <div class="nav-item">
-          <a href="index.html"> Projects</a>
+        <div class="nav-div">|</div>
+        <div class="nav-item" onclick="openWorks()">
+          <a class="nav-link">Works</a>
         </div>
-        <div class="nav-item">
-          <a href="index.html">Home</a>
+        <div class="nav-div">|</div>
+        <div class="nav-item" onclick="openContact()">
+          <a class="nav-link">Contact</a>
         </div>
       </div>
     </div>
