Updated Source Code

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body>
     <!-- Begin Header Code -->
-    <div class="header-wrapper">
+    <div class="header-container">
       <div class="information-wrapper">
         <div class="logo-wrapper">
           <span id="logo">Sakura Sedaia</span>
@@ -68,6 +68,17 @@
       </div>
     </div>
 
+    <div class="header-wrapper">
+      <div class="header-content">
+        <div class="header-1">
+          <h1>Sakura Sedaia</h1>
+          <h2>Minecraft Animator and Machinima Maker</h2>
+        </div>
+        <div class="header-2">
+          
+        </div>
+      </div>
+    </div>
     <div class="build-info">
       <span class="material-icons">
         build
