Added Slideshow (Sort of) and About Section, needs formatting

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
     />
     <link href="assets/main_style.css" rel="stylesheet" />
+    <link href="assets/header-slideshow.css" rel="stylesheet" />
   </head>
 
   <!-- Begin Body Code -->
@@ -69,21 +70,48 @@
     </div>
 
     <div class="header-wrapper">
-      <div class="header-content">
+      <div class="header-content header-slide">
         <div class="header-1">
           <h1>Sakura Sedaia</h1>
           <h2>Minecraft Animator and Machinima Maker</h2>
         </div>
-        <div class="header-2">
-          
+        <div class="header-2"></div>
+      </div>
+    </div>
+
+    <div class="section1-wrapper">
+      <div class="section1-content">
+        <div class="header">
+          <h1>About Me</h1>
+        </div>
+
+        <div class="question-1">
+          <h2>Who am I?</h2>
+          <p>
+            I am a freelance Minecraft Animator and Machinima Maker, Currently I
+            am working with "Knights of Ardonia" to help create seasons 2 and 3
+            of Black Plasma Studio's Minecraft Animated Series called "Songs of
+            War".
+          </p>
+        </div>
+
+        <div class="question-2">
+          <h2>What is my Perfered Software?</h2>
+          <p>Blender 3D</p>
+        </div>
+
+        <div class="question-3">
+          <h2>What are you?</h2>
+          <p>I am a 17 year old Human, though my Avatar is a Female Neko</p>
         </div>
       </div>
     </div>
+    
     <div class="build-info">
       <span class="material-icons">
         build
       </span>
-      <span> Build Date: 12/07/2020 | Version: 0.0.1 Alpha</span>
+      <span> Build Date: 24/07/2020 | Version: 1 Alpha</span>
     </div>
 
     <script src="responsive.js"></script>
@@ -94,5 +122,5 @@
 Document Information & Statistics
 ####################
 Website Created: 11/07/2020 23:53
-Current Build Date: 12/07/2020
+Current Build Date: 24/07/2020
 --></html>
