Attempted to integrate datecheck.js into site and added many new things

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       rel="stylesheet"
     />
     <link href="assets/main_style.css" rel="stylesheet" />
-    <link href="assets/header-slideshow.css" rel="stylesheet" />
   </head>
 
   <!-- Begin Body Code -->
@@ -42,15 +41,6 @@
               report
             </span>
           </div>
-          <div class="alert-icon">
-            <span
-              class="material-icons"
-              id="navigation"
-              onclick="openNavigation()"
-            >
-              menu
-            </span>
-          </div>
         </div>
       </div>
 
@@ -70,7 +60,7 @@
     </div>
 
     <div class="header-wrapper">
-      <div class="header-content header-slide">
+      <div class="header-content">
         <div class="header-1">
           <h1>Sakura Sedaia</h1>
           <h2>Minecraft Animator and Machinima Maker</h2>
@@ -106,15 +96,11 @@
         </div>
       </div>
     </div>
-    
-    <div class="build-info">
-      <span class="material-icons">
-        build
-      </span>
-      <span> Build Date: 24/07/2020 | Version: 1 Alpha</span>
-    </div>
 
     <script src="responsive.js"></script>
+
+    <!-- Datecheck API developed by Sakura -->
+    <script src="assets/Scripts/datecheck.js"></script>
   </body>
 
   <!--
@@ -122,5 +108,5 @@
 Document Information & Statistics
 ####################
 Website Created: 11/07/2020 23:53
-Current Build Date: 24/07/2020
+Current Build Date: 12/08/2020
 --></html>
