--- a/index.html
+++ b/index.html
@@ -1,115 +1,121 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Sakura Sedaia</title>
 
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <title>Sakura Sedaia</title>
 
-    <link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link
-      href="assets/styles/main_style.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <!-- FontAwesome Kit -->
-    <script
-      src="https://kit.fontawesome.com/da3984bc4a.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <rigs-dropdown id="rdp">
-      <div class="close-rdp" onclick="rigsDropdown('close')" id="closeRdpBtn">
-        <span class="material-icons md-36"> cancel </span>
-      </div>
+  <link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
 
-      <div
-        class="rdp rdp-sacr"
-        style="
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link href="assets/styles/main_style.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <!-- FontAwesome Kit -->
+  <script src="https://kit.fontawesome.com/da3984bc4a.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+
+  <rigs-dropdown id="rdp">
+    <div class="close-rdp" onclick="rigsDropdown('close')" id="closeRdpBtn">
+      <span class="material-icons md-36"> cancel </span>
+    </div>
+
+    <div class="rdp rdp-sacr" style="
           background-image: url(assets/images/MCRigBackgrouns/SACRThumbnail1.png);
           background-position: center;
-        "
-      >
-        <div class="rdp-title">
-          <h2 class="rdp-title-h2" id="rdpSACRText">
-            Sakura's Advanced Minecraft Rig
-          </h2>
-          <div class="rdp-btn" href="#" id="rdpSACRBtn">Open Page</div>
-        </div>
+        ">
+      <div class="rdp-title">
+        <h2 class="rdp-title-h2" id="rdpSACRText">
+          Sakura's Advanced Minecraft Rig
+        </h2>
+        <div class="rdp-btn" href="#" id="rdpSACRBtn">Open Page</div>
       </div>
-      <div
-        class="rdp rdp-lacm"
-        style="
+    </div>
+    <div class="rdp rdp-lacm" style="
           background-image: url(assets/images/MCRigBackgrouns/LACMThumbnail1.PNG);
           background-position: center;
-        "
-      >
-        <div class="rdp-title">
-          <h2 class="rdp-title-h2" id="rdpSLACMEText">Sakura's LACM Edit</h2>
-          <div class="rdp-btn" href="#" id="rdpSLACMEBtn">Open Page</div>
-        </div>
+        ">
+      <div class="rdp-title">
+        <h2 class="rdp-title-h2" id="rdpSLACMEText">Sakura's LACM Edit</h2>
+        <div class="rdp-btn" href="#" id="rdpSLACMEBtn">Open Page</div>
       </div>
-    </rigs-dropdown>
+    </div>
+  </rigs-dropdown>
 
-    <header>
-      <div
-        class="header-contain"
-        style="
+
+  <!-- Header Start -->
+  <header>
+    <div class="header-contain" style="
           background-image: url(assets/images/WPRenders/SakuraMeetMavera_PublishCopy.png);
           background-position: 0in -1in;
-        "
-      >
-        <div class="navigation">
-          <span><i data-icon="saki-face"></i>Sakura Sedaia</span>
-          <div class="nav-contian">
-            <div class="nav-item">
-              <a>Home</a>
-            </div>
-            <div class="nav-item">
-              <a>
-                <span onclick="rigsDropdown('open')" class="dropdown"
-                  >Rigs<span class="material-icons"> expand_more </span></span
-                >
-              </a>
-            </div>
-            <div class="nav-item">
-              <a>Contact</a>
-            </div>
+        ">
+
+        <!-- Navigation Start -->
+      <div class="navigation">
+        
+        <span><i data-icon="saki-face"></i>Sakura Sedaia</span>
+
+        <div class="nav-contian">
+          <div class="nav-item">
+            <a>Contact</a>
           </div>
-        </div>
-
-        <div class="header-content">
-          <h1>Personal Portfolio</h1>
-          <h4>Provided by you're local Internet Neko</h4>
-        </div>
-
-        <div class="social-links">
-          <ul>
-            <li>
-              <div class="sm-item" id="YTLink" onclick='openExternal("www.youtube.com/channel/UCGuwtqpTXQELvMYkv8T1zlw")'>YouTube</div>
-            </li>
-            <li>
-              <div class="sm-item" id="DALink" onclick='openExternal("www.deviantart.com/spatialjon")'>DeviantArt</div>
-            </li>
-            <li>
-              <div class="sm-item" id="GHLink" onclick='openExternal("github.com/SakuraSedaia")'>Github</div>
-            </li>
-          </ul>
+          <div class="nav-item">
+            <a>
+              <span onclick="rigsDropdown('open')" class="dropdown">Rigs<span class="material-icons"> expand_more
+                </span></span>
+            </a>
+          </div>
+          <div class="nav-item">
+            Home </div>
         </div>
       </div>
-    </header>
+      <!-- Navigation End -->
 
-    <script src="assets/scripts/responsive.js"></script>
-  </body>
+      <!-- Header Content -->
+      <div class="header-content">
+        <h1>Personal Portfolio</h1>
+        <h4>Provided by you're local Internet Neko</h4>
+      </div>
+
+      <div class="social-links">
+        <ul>
+          <li>
+            <div class="sm-item" id="YTLink" onclick='openExternal("www.youtube.com/channel/UCGuwtqpTXQELvMYkv8T1zlw")'>
+              YouTube</div>
+          </li>
+          <li>
+            <div class="sm-item" id="DALink" onclick='openExternal("www.deviantart.com/spatialjon")'>DeviantArt</div>
+          </li>
+          <li>
+            <div class="sm-item" id="GHLink" onclick='openExternal("github.com/SakuraSedaia")'>Github</div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <!-- End Header -->
+
+  <!-- Begin Page Content -->
+
+  <!-- End Page Content -->
+
+
+  <!-- Begin Footer -->
+  <footer>
+    <div class="footer-contain">
+      
+    </div>
+  </footer>
+  <!-- End Footer -->
+
+
+  <!-- Scripts -->
+  <script src="assets/scripts/responsive.js"></script>
+  <script src="assets/scripts/jquery-3.5.1.min.js"></script>
+</body>
+
 </html>
