Added more Content
SLACME Page Added

Responsive.js optimized and reduced

fixed various bugs

Removed Jquery from Site Directory

Reorganized SCSS Source File

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<h2 class="rdp-title-h2" id="rdpSACRText">
 					Sakura's Advanced Minecraft Rig
 				</h2>
-				<div class="rdp-btn" onclick="openInternal('sacr-rig.html')" id="rdpSACRBtn">Open Page</div>
+				<div class="rdp-btn" onclick="openInternal('sacr-rig')" id="rdpSACRBtn">Open Page</div>
 			</div>
 		</div>
 		<div class="rdp rdp-lacm" style="
@@ -40,7 +40,7 @@
         ">
 			<div class="rdp-title">
 				<h2 class="rdp-title-h2" id="rdpSLACMEText">Sakura's LACM Edit</h2>
-				<div class="rdp-btn" href="#" id="rdpSLACMEBtn">Open Page</div>
+				<div class="rdp-btn" onclick="openInternal('slacme-rig')" id="rdpSLACMEBtn">Open Page</div>
 			</div>
 		</div>
 	</rigs-dropdown>
@@ -55,18 +55,18 @@
 			<div class="navigation">
 				<div class="nav-logo">
 					<div class="logoIco"></div>
-					<div class="logoTxt" onclick="openInternal('index.html')"><span>Sakura Sedaia</span></div>
+					<div class="logoTxt" onclick="openInternal('index')"><span>Sakura Sedaia</span></div>
 				</div>
 
 				<div class="nav-contain">
-					<div class="nav-item" data-active="true" onclick="openInternal( 'index.html')">
+					<div class="nav-item" data-active="true" onclick="openInternal( 'index')">
 						Home
 					</div>
 					<div class="nav-item" onclick="rigsDropdown('open')">Rigs</div>
-					<div class="nav-item" onclick="openInternal( 'projects.html')">
+					<div class="nav-item" onclick="openInternal( 'projects')">
 						Projects
 					</div>
-					<div class="nav-item" onclick="openInternal( 'contact.html')">
+					<div class="nav-item" onclick="openInternal( 'contact')">
 						Contact
 					</div>
 				</div>
@@ -131,7 +131,8 @@
 				<div class="pxc-bg"
 					style="background-image:url('https://i.gyazo.com/a846fc87cca5ebd3942ae1e038bb5083.png')"> </div>
 				<div class="pxc-avatar"><img
-						src="https://store.playstation.com/store/api/chihiro/00_09_000/container/GB/en/999/EP4312-CUSA07658_00-AV00000000000049/1536930670000/image?w=240&amp;h=240&amp;bg_color=000000&amp;opacity=100&amp;_version=00_09_000" />
+						src="https://store.playstation.com/store/api/chihiro/00_09_000/container/GB/en/999/EP4312-CUSA07658_00-AV00000000000049/1536930670000/image?w=240&amp;h=240&amp;bg_color=000000&amp;opacity=100&amp;_version=00_09_000"
+						alt="Discord Server Icon" />
 				</div>
 				<div class="pxc-stopper"> </div>
 				<div class="pxc-subcard">
