--- a/slacme-rig.html
+++ b/slacme-rig.html
@@ -12,6 +12,7 @@
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	<link href="assets/styles/main_style.css" rel="stylesheet" type="text/css" />
+
 	<!-- FontAwesome Kit -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
 </head>
@@ -40,7 +41,7 @@
         ">
 			<div class="rdp-title">
 				<h2 class="rdp-title-h2" id="rdpSLACMEText">Sakura's LACM Edit</h2>
-				<div class="rdp-btn" onclick="openInternal('slacme-rig')" id="rdpSLACMEBtn">Open Page</div>
+				<div class="rdp-btn" href="#" id="rdpSLACMEBtn">Open Page</div>
 			</div>
 		</div>
 	</rigs-dropdown>
@@ -88,8 +89,8 @@
 	<div class="about-sacr">
 		<div class="title-sacr">
 			<div class="title-text">
-				<h1>Sakura's Advanced Character Rig</h1>
-				<h3>Lightweight Advanced Minecraft Character Rig built and designed by an Animator for Animators</h3>
+				<h1>Sakura's "LACM" Edit</h1>
+				<h3>An Edit aimed at Improving an Impoverished and Discontinued Rig</h3>
 			</div>
 			<div class="title-bg"></div>
 
@@ -98,19 +99,23 @@
 		<!-- Rig Download -->
 		<div class="rig-download-section">
 			<div class="rds-col rds-background">
-				<img src="https://sakura-sedaia.com/assets/images/WPRenders/SoWModTeam_Render.png" width="540px"
-					alt="background">
+				<img src="assets/images/WPRenders/CalithSakura-Frozen.png" width="540px" alt="background">
 			</div>
 			<div class="rds-col">
-				<h1>Download SACR R4.1.1 LTS</h1>
-				<span class="file-details">File Size: 1.21MB |
-					<a onclick="openInternal('assets/misc/sacr-changelog-latest.txt')"
-						class="download-extra">Changelog</a> |
-					<a onclick="openExternal('github.com/SakuraSedaia/SACR-MC-Rig/')" class="download-extra">GitHub
+				<h1>Download LACM Sakura's Edit V2</h1>
+				<span class="file-details">File Size: 1.28MB
+					<a onclick="openInternal('assets/misc/slacme-changelog-latest.txt')" class="download-extra"
+						hidden>Changelog</a> |
+					<a onclick="openExternal('github.com/SakuraSedaia/LACM-Sakura-Edit/')" class="download-extra">GitHub
 						Repo</a>
 				</span>
-				<div class="download-lr download-extra" onclick="downloadSACR(true)">Latest Release</div>
-				<div onclick="openInternal('slacme-rig')" class="link">Go to Sakura's LACM Edit</div>
+
+				<!-- 
+	Refer to internal Documentation in responsive.js for information on Dependant State Variables 
+-->
+
+				<div class="download-lr download-extra" onclick="downloadSLACME(false)">Latest Release</div>
+				<div onclick="openInternal('sacr-rig')" class="link">Go to SACR</div>
 			</div>
 
 		</div>
@@ -124,26 +129,18 @@
 					<div class="row-1-col feat-one">
 						<h2>Light Weight</h2>
 						<div class="feat-overlay">
-							SACR's Optimized package should allow most mid-range computers and above to run the Standard
-							Build easily,
+							Due to various Optimizations and Improvements, the SLACME rig is even more opimized than
+							it's original counterpart
 						</div>
 					</div>
 					<div class="row-1-col feat-two">
-						<h2>Feature Packed</h2>
+						<h2>Near to the Original</h2>
 						<div class="feat-overlay">
-							<p>SACR is packed with enough features to be able to get the job done and more, utilize the
-								Lattice system to create your own Mesh Preset and extrude the rig to your hearts
-								content, even try out it's embedded Teeth and Female Modes for your special rigs</p>
+							<p>LACM Contains all features from the original LACM V1 rig, as well as a few extra bits and
+								bobs added by Sakura</p>
 						</div>
 					</div>
-					<div class="row-1-col feat-three">
-						<h2>Long-Term Support</h2>
-						<div class="feat-overlay">
-							<p>The SACR's Long-Term Support Status means the rig will continue to be updated with minor
-								feature updates and bug fixes for a extended amount of time, though this means major
-								content updates</p>
-						</div>
-					</div>
+
 				</div>
 			</div>
 
