--- a/rig-navigation.html
+++ b/rig-navigation.html
@@ -56,13 +56,14 @@
 	<div class="xmasCounter" id="xmasContainer">Days until Christmas:
 		<span id="xmasCounter">Undefined</span>
 	</div>
-	<div class="dev-warning"><strong>ATTENTION: </strong>This site is still in Development, please report any issues to Sakura at <a href="mailto:endergfx6@gmail.com">this Email</a></div></header>
+	<div class="dev-warning" id="devWarning"></div>
+</header>
 <!-- End Header -->
 
 	<!-- Begin page Content -->
 	<div class="rig-browser-section">
 		<p onclick="openInternal('sacr-rig')">SACR Minecraft Rig</p>
-		<p onclick="openInternal('slacme-rig')">SLACME Minecraft Rig</p>
+		<p onclick="openInternal('slacme-rig')">SLACME Minecraft Rig (Depricated)</p>
 		<p onclick="openInternal('blender-assets')" hidden>Blender Assets</p>
 	</div>
 	<!-- End page Content -->
@@ -74,8 +75,9 @@
 	<!-- End Footer -->
 
 	<!-- Scripts -->
+	<script src="assets/scripts/age.js"></script>
+	<script src="assets/scripts/seasons.js"></script>
 	<script src="assets/scripts/responsive.js"></script>
-	<script src="assets/scripts/christmas.js"></script>
 </body>
 
 </html>
