Minor update to Rig Pages
Added Download for SLACME

Added Link to SLACME Changelog

Moved changelogs to a new Directory
> old "assets/misc/*"
> new "assets/text/*"

Fixed CSS Issues

Added JS Function
> openText(url)

Fixed Attribute in "sacr-rig.html"

Updated main_style.css

--- a/slacme-rig.html
+++ b/slacme-rig.html
@@ -85,9 +85,8 @@
 			</div>
 			<div class="rds-col">
 				<h1>Download LACM Sakura's Edit V2</h1>
-				<span class="file-details">File Size: 1.28MB
-					<a onclick="openInternal('assets/misc/slacme-changelog-latest.txt')" class="download-extra"
-						hidden>Changelog</a> |
+				<span class="file-details">File Size: 1.28MB | 
+					<a onclick="openText('slacme-changelog-latest')" class="download-extra">Changelog</a> |
 					<a onclick="openExternal('github.com/SakuraSedaia/LACM-Sakura-Edit/')" class="download-extra">GitHub
 						Repo</a>
 				</span>
@@ -96,8 +95,8 @@
 	Refer to internal Documentation in responsive.js for information on Dependant State Variables 
 -->
 
-				<div class="download-lr download-extra" onclick="downloadSLACME(false)">(Download not Active)</div>
-				<div onclick="openInternal('sacr-rig')" class="link">Go to SACR</div>
+				<div class="download-lr download-extra" onclick="downloadSLACME(true)">Latest Release</div>
+				<div onclick="openInternal('sacr-rig')" class="links">Go to SACR</div>
 			</div>
 
 		</div>
