--- a/sacr-rig.html
+++ b/sacr-rig.html
@@ -74,19 +74,19 @@
 		<!-- Rig Download -->
 		<div class="rig-download-section">
 			<div class="rds-col rds-background">
-				<img src="https://sakura-sedaia.com/assets/images/WPRenders/SoWModTeam_Render.png" width="540px"
+				<img src="assets/images/WPRenders/SoWModTeam_Render.png" width="540px"
 					alt="background">
 			</div>
 			<div class="rds-col">
 				<h1>Download SACR R4.1.1 LTS</h1>
 				<span class="file-details">File Size: 1.21MB |
-					<a onclick="openInternal('assets/misc/sacr-changelog-latest.txt')"
+					<a onclick="openText('sacr-changelog-latest')"
 						class="download-extra">Changelog</a> |
 					<a onclick="openExternal('github.com/SakuraSedaia/SACR-MC-Rig/')" class="download-extra">GitHub
 						Repo</a>
 				</span>
 				<div class="download-lr download-extra" onclick="downloadSACR(true)">Latest Release</div>
-				<div onclick="openInternal('slacme-rig')" class="link">Go to Sakura's LACM Edit</div>
+				<div onclick="openInternal('slacme-rig')" class="links">Go to Sakura's LACM Edit</div>
 			</div>
 
 		</div>
